--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -4,9 +4,9 @@
   <div class="row">
     <div class="span6">
       <h1>My Expense Sheet</h1>
+      <a href="/expenses/add_expense">add expense</a>
       <hr>
       <p>All your Expenses are here</p>
-
       <div class="well">
         <table>
           <thead class="well">
