adding both add expence and add income link in each index

--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -4,7 +4,8 @@
   <div class="row">
     <div class="span6">
       <h1>My Expense Sheet</h1>
-      <a href="/expenses/add_expense">add expense</a>
+      <a href="/expenses/add_expense">add expense</a><br>
+      <a href="/incomes/add_income">add income</a>
       <hr>
       <p>All your Expenses are here</p>
       <div class="well">
