--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -5,6 +5,7 @@
   <div class="row">
     <div class="span6">
       <h1>My Expense Sheet</h1>
+      <a href="/expenses/add_expense">add expense</a><br>
       <a href="/incomes/add_income">add income</a>
       <hr>
       <p>All your Incomes are here</p>
