--- a/app/views/incomes/add_income.html.erb
+++ b/app/views/incomes/add_income.html.erb
@@ -1,5 +1,17 @@
-<%= form_for @new_income, :url => {:action => "add_income"} do |i| %>
-    <%= i.text_field :source, :autofocus=>true %>
-    <%= i.text_field :amount%>
-    <%= i.submit "Add Income", class: "btn btn-primary" %>
-<% end %>
+<div class="well">
+  <%= form_for @new_income, :url => {:action => "add_income"} do |i| %>
+      <table>
+        <tbody>
+        <tr>
+          <td>Source   </td>
+          <td><%= i.text_field :source, :autofocus => true %></td>
+        </tr>
+        <tr>
+          <td>Amount  </td>
+          <td><%= i.text_field :amount %></td>
+        </tr>
+        </tbody>
+      </table>
+      <%= i.submit "Add Income", class: "btn btn-primary" %>
+  <% end %>
+</div>
