--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -30,7 +30,7 @@
       <p>All your Incomes are here</p>
 
       <div class="well">
-        <table>
+        <table class="table">
           <thead class="well">
           <tr>
             <th>Date</th>
