extracted commen code in index of expence and income

--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -3,29 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="span6">
-      <h1>My Expense Sheet</h1>
-      <a href="/expenses/add_expense">add expense</a><br>
-      <a href="/incomes/add_income">add income</a>
-      <hr>
-
-      <% if flash[:error] %>
-          <div class="alert alert-error">
-            <button type="button" class="close" data-dismiss="alert">×</button>
-            <strong><%= flash[:error] %></strong>
-          </div>
-      <% end %>
-
-      <% if flash[:success] %>
-          <div class="alert alert-success">
-            <button type="button" class="close" data-dismiss="alert">×</button>
-            <strong><%= flash[:success] %></strong>
-          </div>
-      <% end %>
-
-      <h3>
-        <a href="/expenses/index">Expenses</a>
-        <a href="/incomes/index">Incomes</a>
-      </h3>
+      <%= render 'layouts/common_layout' %>
 
       <p>All your Incomes are here</p>
 
