--- a/app/views/layouts/_common_layout.html.erb
+++ b/app/views/layouts/_common_layout.html.erb
@@ -1,5 +1,6 @@
 <h1>My Expense Sheet</h1>
-<h2><%= @remaining_amount %></h2>
+  your balance = <%= @remaining_amount %><br>
+
 <a href="/expenses/add_expense">add expense</a><br>
 <a href="/incomes/add_income">add income</a>
 <hr>
@@ -18,7 +19,16 @@
     </div>
 <% end %>
 
-<h3>
-  <a href="/expenses/index">Expenses</a>
-  <a href="/incomes/index">Incomes</a>
-</h3>
+<div class="row">
+  <div class="span2">
+    <h3>
+      <a href="/expenses/index">Expenses</a>
+    </h3>
+  </div>
+  <div class="span2">
+    <h3>
+      <a href="/incomes/index">Incomes</a>
+    </h3>
+  </div>
+
+</div>
