--- a/app/views/layouts/_common_layout.html.erb
+++ b/app/views/layouts/_common_layout.html.erb
@@ -1,8 +1,10 @@
 <h1>My Expense Sheet</h1>
-  your balance = <%= @remaining_amount %><br>
+<div class=well>
+  your balance = <%= @remaining_amount %> <br>
+  <a href="/expenses/add_expense">add expense</a><br>
+  <a href="/incomes/add_income">add income</a>
+</div>
 
-<a href="/expenses/add_expense">add expense</a><br>
-<a href="/incomes/add_income">add income</a>
 <hr>
 
 <% if flash[:error] %>
