--- a/app/views/layouts/_common_layout.html.erb
+++ b/app/views/layouts/_common_layout.html.erb
@@ -24,12 +24,12 @@
 <div class="row">
   <div class="span2">
     <h3>
-      <a href="/expenses/index">Expenses</a>
+      <a href="/expenses">Expenses</a>
     </h3>
   </div>
   <div class="span2">
     <h3>
-      <a href="/incomes/index">Incomes</a>
+      <a href="/incomes">Incomes</a>
     </h3>
   </div>
 
