--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,28 +1,32 @@
 <div class="container">
   <div class="row">
     <div class="span6">
-      <%= render 'layouts/common_layout' %>
+      <div class=well>
 
-      <div class="well">
-        <table class="table">
-          <thead class="well">
-          <tr>
-            <th>Date</th>
-            <th>Name</th>
-            <th>Amount</th>
-          </tr>
-          <tbody>
-          <% @expenses.each do |e| %>
-              <tr>
-                <td><%= e.created_at.to_date %></td>
-                <td><%= e.name %></td>
-                <td><%= e.amount %></td>
-              </tr>
-          <% end %>
-          </tbody>
-        </table><br>
+        <%= render 'layouts/common_layout' %>
 
-        <h4><p>Total Expenses : <%= @expenses.sum(:amount) %></p></h4>
+        <div class="well">
+          <table class="table">
+            <thead class="well">
+            <tr>
+              <th>Date</th>
+              <th>Name</th>
+              <th>Amount</th>
+            </tr>
+            <tbody>
+            <% @expenses.each do |e| %>
+                <tr>
+                  <td><%= e.created_at.to_date %></td>
+                  <td><%= e.name %></td>
+                  <td><%= e.amount %></td>
+                </tr>
+            <% end %>
+            </tbody>
+          </table>
+          <br>
+
+          <h4><p>Total Expenses : <%= @expenses.sum(:amount) %></p></h4>
+        </div>
       </div>
     </div>
   </div>
