--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -1,28 +1,31 @@
 <div class="container">
   <div class="row">
     <div class="span6">
-      <%= render 'layouts/common_layout' %>
+      <div class=well>
 
-      <div class="well">
-        <table class="table">
-          <thead class="well">
-          <tr>
-            <th>Date</th>
-            <th>Source</th>
-            <th>Amount</th>
-          </tr>
-          <tbody>
-          <% @incomes.each do |i| %>
-              <tr>
-                <td><%= i.created_at.to_date %></td>
-                <td><%= i.source %></td>
-                <td><%= i.amount %></td>
-              </tr>
-          <% end %>
-          </tbody>
-        </table>
-        <br>
-        <h4><p>Total Incomes : <%= @incomes.sum(:amount) %></p></h4>
+        <%= render 'layouts/common_layout' %>
+
+        <div class="well">
+          <table class="table">
+            <thead class="well">
+            <tr>
+              <th>Date</th>
+              <th>Source</th>
+              <th>Amount</th>
+            </tr>
+            <tbody>
+            <% @incomes.each do |i| %>
+                <tr>
+                  <td><%= i.created_at.to_date %></td>
+                  <td><%= i.source %></td>
+                  <td><%= i.amount %></td>
+                </tr>
+            <% end %>
+            </tbody>
+          </table>
+          <br>
+          <h4><p>Total Incomes : <%= @incomes.sum(:amount) %></p></h4>
+        </div>
       </div>
     </div>
   </div>
