--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="span6">
-      <div class=well>
+      <div class="well">
 
         <%= render 'layouts/common_layout' %>
 
@@ -24,8 +24,11 @@
             </tbody>
           </table>
           <br>
-          <h4><p>Total Incomes : <%= @incomes.sum(:amount) %></p></h4>
+          <h4>
+            <p>Total Incomes : <%= @incomes.sum(:amount) %></p>
+          </h4>
         </div>
+        <%= link_to('Clear list', "reset/delete_all") %>
       </div>
     </div>
   </div>
