storing total amount in a veriable

--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -25,7 +25,7 @@
           </table>
           <br>
 
-          <h4><p>Total Expenses : <%= @expenses.sum(:amount) %></p></h4>
+          <h4><p>Total Expenses : <%= @total_expense %></p></h4>
         </div>
         <%= link_to('Clear list', "reset/delete_all") %>
       </div>
