--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -25,7 +25,7 @@
           </table>
           <br>
           <h4>
-            <p>Total Incomes : <%= @incomes.sum(:amount) %></p>
+            <p>Total Incomes : <%= @total_income %></p>
           </h4>
         </div>
         <%= link_to('Clear list', "reset/delete_all") %>
